--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiogram==2.25.1
+aiogram~=2.23.1
 aiohttp==3.8.4
 aiosignal==1.3.1
 appnope==0.1.3
@@ -53,3 +53,6 @@ traitlets==5.9.0
 tzdata==2023.3
 wcwidth==0.2.6
 yarl==1.9.1
+
+python-dotenv~=0.21.1
+googlemaps~=4.10.0
